--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{% static 'css/comments.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'expert/css/style.css' %}">
+    {% block style %}{% endblock %}
     {#    <link rel="stylesheet" href="{% static 'expert/css/style_xs.css' %}">#}
 </head>
 <body class="{% if request.user.expertuser.status == 'signed_up' %}modal-open{% endif %}">
@@ -182,6 +183,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
 <script type="text/javascript" src="{% static 'js/persianumber.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/autosize.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
+<script type="text/javascript" src="{% static 'expert/js/script-functions.js' %}"></script>
 {% block script %}{% endblock %}
 
 <form action='{% url 'expert:userInfo' %}' method='post'>
@@ -190,8 +193,6 @@
         let instance = "{{ instance }}";
     </script>
 </form>
-<script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
-<script type="text/javascript" src="{% static 'expert/js/script-functions.js' %}"></script>
 <script type="text/javascript" src="{% static 'expert/js/script.js' %}"></script>
 {% if request.user.expertuser.status == "signed_up" %}
     <div class="modal-backdrop fade show" style="user-select: auto;"></div>
