--- a/static/css/style.css
+++ b/static/css/style.css
@@ -685,45 +685,6 @@ img {
     min-height: 350px;
 }
 
-.fixed-back .card.side-card .card-side {
-    background-color: #f7fdf8;
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 170px;
-}
-
-.fixed-back .card.side-card .card-side.has-image {
-    padding-top: 180px;
-}
-
-@media (max-width: 767px) {
-    .fixed-back .card.side-card {
-        padding-right: 0;
-    }
-
-    .fixed-back .card.side-card .card-side {
-        background-color: transparent;
-        position: relative;
-        top: auto;
-        right: auto;
-        height: 100%;
-        width: calc(100% + 10px);
-        margin-top: -40px;
-        margin-left: -10px;
-    }
-
-    .fixed-back .card.side-card .card-side.has-image {
-        padding-top: 0px;
-    }
-
-}
-
-.fixed-back .card.side-card .card-side.has-image .information {
-    padding: 0 10px;
-}
-
 .fixed-back .card-head {
     position: absolute;
     top: 10px;
@@ -1904,6 +1865,10 @@ table {
     border-spacing: 0;
 }
 
+.modal-resume table {
+    margin: 30px 0;
+}
+
 table tbody tr {
     color: #707070;
     font-weight: bold;
@@ -1924,6 +1889,10 @@ thead {
     color: #3CCD1C;
     font-weight: bold;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.modal-resume thead {
+    border-bottom: none;
 }
 
 .user-info table {
@@ -4344,21 +4313,6 @@ pre#question-body {
     margin: 10px auto 20px;
 }
 
-.card-side.has-image img {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-}
-
-
-.user-personal-info > div:first-child {
-    position: absolute;
-    top: 20px;
-    right: 10px;
-    width: 150px;
-    height: 150px;
-}
-
 span.border-span {
     display: inline-block;
     border: none;
@@ -4445,7 +4399,7 @@ body > * {
     transition: filter .15s linear;
 }
 
-.modal-open > *:not(.modal):not(.modal-backdrop):not(.iziToast-wrapper):not(.tooltip) {
+.modal-open > *:not(.modal):not(.modal-backdrop):not(.iziToast-wrapper):not(.tooltip):not(#gtx-trans):not(.jfk-bubble.gtx-bubble) {
     -webkit-filter: blur(5px);
     filter: blur(5px);
     /* background: white; */
@@ -4683,4 +4637,101 @@ img.center-head {
     color: #fff;
     background-color: #3CCD1C;
     border-color: #3CCD1C;
+}
+
+.modal-resume {
+
+}
+
+.modal-resume .user-personal-info {
+    display: flex;
+}
+
+.modal-resume .user-personal-info .profile img {
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    width: 200px;
+}
+
+.modal-resume .user-personal-info .information {
+    min-height: 200px;
+    text-align: right;
+    margin-right: 20px;
+}
+
+.modal-resume .user-personal-info .information h6 {
+    margin-bottom: 15px;
+}
+
+.modal-resume .user-personal-info .information .common-info {
+    font-size: 1.05em;
+    line-height: 25px;
+}
+
+.modal-resume .user-personal-info .information .common-info span.value {
+    color: #A3A3A3;
+    min-width: 50px;
+    display: inline-block;
+}
+
+.modal-resume .user-personal-info .information .common-info span:last-child {
+
+}
+
+.modal-resume .user-personal-info .request-response {
+    margin-top: -35px;
+}
+
+.modal-resume .user-personal-info .request-response button {
+    min-width: 75px;
+}
+
+.modal-resume .technique-item {
+    color: #707070;
+    width: 100%;
+    text-align: left;
+    direction: ltr;
+    position: relative;
+}
+
+.modal-resume .technique-item .grade {
+    min-width: 25px;
+    display: inline-block;
+    background-color: #3ccd1c;
+    min-height: 4px;
+    margin-right: 60px;
+    float: inline-end;
+    margin-top: 7px;
+}
+
+.modal-resume .technique-item .grade:after {
+    content: "";
+    position: absolute;
+    top: 7px;
+    right: 0;
+    width: 25px;
+    height: 4px;
+    background-color: #f7fdf8;
+    border: 1px solid #3ccd1c;
+}
+
+.modal-resume .technique-item .grade:before {
+    content: '';
+    position: absolute;
+    top: 7px;
+    right: 30px;
+    width: 25px;
+    height: 4px;
+    background-color: #f7fdf8;
+    border: 1px solid #3ccd1c;
+}
+
+.modal-resume .technique-item .grade__A:after,
+.modal-resume .technique-item .grade__A:before {
+    background-color: #3ccd1c;
+}
+
+.modal-resume .technique-item .grade__B:before {
+    background-color: #3ccd1c;
 }
