--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -801,6 +801,21 @@
                         </div>
                     </div>
                 </div>
+                <div class="card box flow-root-display w-100">
+                        <div class="col-lg-12 text-right">
+                            <span class="sub-header">
+                                رزومه
+                            </span>
+                            <div class="text-center w-100">
+                                <label class="attach-label">
+                                    <input type="file" name="resume" id="id_resume"
+                                        class="attach-input">
+                                    <i class="fas fa-cloud-upload-alt"></i>
+                                    <span class="file-name">بارگذاری رزومه ...</span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
                 <button type="submit" class="form-submit">
                     <i class="fas fa-check"></i>
                     اعمال تغییرات
